Construction: Extend Length: Extend length of pipes/cables/passages from 20 to 1000.
Spice Harvester v0.4:
It was breaking down, must've been too much spice...
Added a confirm before destruction.
Reworked the internals a bit.

Add Water Each Sol v0.5:
Cleaned up code, and hopefully fixed the "not getting water after awhile" problem.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Spice Harvester/changes.txt
+++ b/Mods ChoGGi/Spice Harvester/changes.txt
@@ -1,3 +1,7 @@
+v0.4
+It was breaking down, must've been too much spice...
+Added a confirm before destruction.
+Reworked the internals a bit.
 v0.3
 Da Vinci...
 No more thumping when the game is paused.
