Expanded Cheat Menu:
### Changed:
- Added icons to some lists (example: research tech).
- Some lists just displayed <param1> in the tooltip since I was too lazy to get the actual value.
- Examine:
- > Examine UI Flash toggles visibility now (not everything works with borders).
- > OpenExamine("object_name"): Will examine "_G.object_name" (table example: "table.table.object")

### Fixed:
- Set Sponsor/Commander broke in DA (thanks Dawnmist).

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -261,7 +261,7 @@ Which you can then mess around with some more in the console.",
 302535920000067,TraceCall,
 302535920000070,"Shows list of attachments. This %s has %s.
 
-Press %s to hide markers.",
+Press %s to hide green markers.",
 302535920000040,Exec Code,
 302535920000072,"Paste or type code to be executed here, ChoGGi.CurObj is the examined object (ignored when opened from Console).
 Press Ctrl-Enter or Shift-Enter to execute code.",
@@ -303,9 +303,9 @@ Double click selected item to open in new manipulator.",
 302535920000102,Use to change values of selected list item.,
 302535920000103,Edit Value,
 302535920001336,Export When This Amount,
-302535920001337,When you have this many rares in storage always launch.,
+302535920001337,When you have this many rares in storage launch right away.,
 302535920001330,Instant Export On Toggle,
-302535920001331,Toggle Forbid Exports to have it instantly export whatever is stored (over n over).,
+302535920001331,Toggle Forbid Exports to have it instantly export current stock.,
 302535920001332,Export Amount Per Trip,
 302535920001333,How many rare metals you can export per trip.,
 302535920001334,Import Amount Per Trip,
