Expanded Cheat Menu:
Concat changed to string.format...

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,4 +1,11 @@
 ID,Text,Translation,Old Translation,Gender
+302535920001110,,
+302535920001111,,
+302535920001113,,
+302535920001114,,
+302535920001115,,
+302535920001116,,
+302535920000138,,
 302535920001338,,
 302535920001339,,
 302535920001340,,
@@ -26,7 +33,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920001302,Find,
 302535920001303,Search for text within %s.,
 302535920000306,Everything,
-302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920000855,Last chance before deletion!,
 302535920000800,MaleOrFemale,
 302535920000613,Drone Carry Amount,
@@ -268,6 +274,7 @@ Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000073,Execute code in text box (Ctrl-Enter or Shift-Enter will also work).,
 302535920000075,Insert Obj,
 302535920000076,At caret position inserts: ChoGGi.CurObj,
+302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920001324,ECM: OpenInListChoice(list) is blank... This shouldn't happen.,
 302535920000068,Filter Text,
 302535920000806,"Only show items containing this text.
@@ -1392,7 +1399,6 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920000680,Annoying Sounds,
 302535920001126,Double,
 302535920000647,Border Scrolling,
-302535920000138,"surface, subsurface, and terrain deposits visible.",
 302535920001255,Will only apply to objects in the same dome as selected object.,
 302535920001256,Will only apply to selected object.,
 302535920000347,Star Dome,
@@ -1421,13 +1427,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001106,Change main object colours.,
 302535920001107,Change colours of an attached object.,
 302535920001108,Double click to open object/attachment to edit.,
-302535920001109,Loops though and makes all,
-302535920001110,anomalies visible.,
-302535920001111,buildings visible.,
-302535920001113,pipes and cables visible.,
-302535920001114,colonists visible.,
-302535920001115,rovers and drones visible.,
-302535920001116,"surface, subsurface, and terrain deposits visible.",
+302535920001109,Loops though and makes all %s visible.,
 302535920001117,Opacity,
 302535920001118,"You can still select items after making them invisible (0), but it may take some effort :).",
 302535920001122,%s: HAXOR,
