Expanded Cheat Menu:
### Added:
- Game>Whiter Rocks: Helps the rocks blend in better when using the polar ground texture.

### Fixed:
- Change Terrain Type now restores concrete/dome textures.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001111,,
-302535920001113,,
+302535920001111,Whiter Rocks,
+302535920001113,Helps the rocks blend in better when using the polar ground texture.,
 302535920001114,,
 302535920001115,,
 302535920001116,,
