Expanded Cheat Menu:
### Changed:
- Change Logo/Upload Mod shows image in hint.
- Random Object Colour is more random.
- Change Colour renamed to Color Modifier.
- Color Modifier object list will now blink object when you select a list item.

### Fixed:
- Wrong images in Mystery Log.
- For multi-select list choices one of the hints was missing.
- Examine popups would show a list from another examine.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,4 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
+302535920000016,,
+302535920000021,,
 302535920001341,,
 302535920001342,,
 302535920001343,,
@@ -32,8 +34,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920000955,Handle,
 302535920001201,Interval,
 302535920000014,Spawned,
-302535920000016,Colour,
-302535920000021,Change Colour,
 302535920000030,Enabled,
 302535920000034,Request,
 302535920000035,Grids,
@@ -101,7 +101,7 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000968,Collisions,
 302535920000969,Collisions %s on %s,
 302535920000012,Error borked building: %s,
-302535920000015,Can't colour object,
+302535920000015,Can't colour %s.,
 302535920000017,Use the colour picker (dbl right-click for instant change).,
 302535920000018,Don't use the colour picker: Numbers range from -255 to 255.,
 302535920000019,"Single colour for object (this colour will interact with the other colours).
@@ -1426,7 +1426,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001105,"Select/mouse over an object (buildings, vehicles, signs, rocky outcrops).",
 302535920001106,Change main object colours.,
 302535920001107,Change colours of an attached object.,
-302535920001108,Double click to open object/attachment to edit.,
+302535920001108,Double click to open object/attachment to edit (select to flash object).,
 302535920001109,Loops though and makes all %s visible.,
 302535920001117,Opacity,
 302535920001118,"You can still select items after making them invisible (0), but it may take some effort :).",
@@ -1476,7 +1476,8 @@ Not permanent for colonists after they exit buildings (for now).",
 302535920000689,Removes all dust from all objects.,
 302535920000690,Fix All Objects,
 302535920000691,Fixes all broken objects.,
-302535920000693,Select/mouse over an object to change the colours.,
+302535920000693,"Select/mouse over an object to change the colours
+Use Shift- or Ctrl- for random colours/reset colours.",
 302535920000695,Change the opacity of objects.,
 302535920000696,Infopanel Cheats,
 302535920000697,Shows the cheat pane in the info panel (selection panel).,
