--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,4 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
+302535920000316,,
 302535920001342,,
 302535920001343,,
 302535920001344,,
@@ -451,7 +452,7 @@ Works on any building that produces.",
 302535920000224,Show Hidden Buildings,
 302535920000225,Show hidden buildings (restart game to toggle).,
 302535920000226,Remove Spire Point Limit,
-302535920000227,"Build spires anywhere in the dome.
+302535920000227,"Build spires anywhere in domes.
 Use with %s to fill up a dome with spires.",
 302535920000229,Buildings are built instantly.,
 302535920000230,Remove Building Limits,
@@ -520,7 +521,7 @@ Buildings are still unlocked.",
 302535920000245,Multi-Spawn,
 302535920000246,Missle,
 302535920000250,Might be a little laggy,
-302535920000252,"Targeted to mouse cursor (use arrow keys to select and enter to start, Ctrl/Shift to multi-select).",
+302535920000252,"Targeted to mouse cursor (use arrow keys to select and enter to start).",
 302535920000253,"Core: Repeatable, exploit core resources.",
 302535920000254,"Deep: Toggleable, exploit deep resources.",
 302535920000255,Deep,
@@ -593,8 +594,7 @@ Best hope you picked India as your Mars sponsor...",
 302535920000313,All the mysteries,
 302535920000314,Researched,
 302535920000315,%s: Unleash your inner Black Monolith Mystery.,
-302535920000316,Research Unlock,
-302535920000317,Select Unlock or Research then select the tech you want (Ctrl/Shift to multi-select).,
+302535920000317,Select Unlock or Research then select the tech you want. Most mystery tech is locked to that mystery.,
 302535920000318,Unlock,
 302535920000319,Just unlocks in the research tree.,
 302535920000320,Unlocks and researchs.,
