Expanded Cheat Menu: Bloodyier console close button again.
Solaria Telepresence v0.6:
Lock Workplace v0.5:
Was spamming the log. They still worked fine, but I like me a clean log.

Pin Expander v0.3:
Clicking a rocket will work properly now.
Non-spawned rockets are now hidden from view.

Auto Empty Waste Storage v0.3:
Cleaned up code.
Stopped use of ModConfig, you can change options when you select a dump site.

Restore Request Maintenance v0.3:
Hopefully fixing an issue.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Pin Expander/changes.txt
+++ b/Mods ChoGGi/Pin Expander/changes.txt
@@ -1,3 +1,7 @@
+v0.3
+Clicking a rocket will work properly now.
+Non-spawned rockets are now hidden from view.
+
 v0.2
 Faster (3K+ colonists takes 1-2 seconds).
 
