--- a/Mods ChoGGi/Restore Request Maintenance/changes.txt
+++ b/Mods ChoGGi/Restore Request Maintenance/changes.txt
@@ -1,3 +1,8 @@
+v0.5
+Cleaning up code (ChoGGi's Library).
+v0.4
+Might have introduced a bug in the last update.
+Cleaning up code (ChoGGi's Library).
 v0.3
 Hopefully fixing an issue.
 v0.2
