Mods: Updated a bunch to use the Library.
LIB:
## v0.5 (05 Sep 2018)
Fixed:
Some menus may have shown "nil" for the title.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Pin Expander/changes.txt
+++ b/Mods ChoGGi/Pin Expander/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Cleaning up code (ChoGGi's Library).
+
 v0.3
 Clicking a rocket will work properly now.
 Non-spawned rockets are now hidden from view.
