--- a/Mods ChoGGi/Solaria Telepresence/changes.txt
+++ b/Mods ChoGGi/Solaria Telepresence/changes.txt
@@ -1,3 +1,6 @@
+v0.7
+I accidently removed the code removing the limit on placing outside workplaces.
+Cleaning up code (ChoGGi's Library).
 v0.6
 0.5 was spamming the log. It still worked fine, but I like me a clean log.
 v0.5
