--- a/Mods ChoGGi/Spice Harvester/changes.txt
+++ b/Mods ChoGGi/Spice Harvester/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+Removed some log spam.
+Cleaning up code (ChoGGi's Library).
 v0.4
 It was breaking down, must've been too much spice...
 Added a confirm before destruction.
