Expanded Cheat Menu:
### Fixed:
- Upgraded buildings may reset some cheat settings (thanks hchsiao).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi Library/Locales/English.csv
+++ b/ChoGGi Library/Locales/English.csv
@@ -663,7 +663,9 @@ Where seldom is heard a discouraging word.",
 302535920000781,%s: Stupid and happy,
 302535920000782,%s: Getting away ain't that easy,
 302535920000783,%s: Free Air,
-302535920000784,%s: Free Food,
+302535920000784,"%s: A stale piece of bread is better than nothing.
+And nothing is better than a big juicey steak.
+Therefore a stale piece of bread is better than a big juicy steak.",
 302535920000785,%s: No Shame,
 302535920000786,"%s:We've all seen them, on the playground, at the store, walking on the streets.",
 302535920000787,"%s: Say, ""Small umbrella, small umbrella.""",
