--- a/Mods ChoGGi/Empty Mech Depot/changes.txt
+++ b/Mods ChoGGi/Empty Mech Depot/changes.txt
@@ -1,7 +1,11 @@
-Version 0.4
+v0.5
+Da Vinci.
+Cleaning up code (ChoGGi's Library).
+
+v0.4
 Curo update.
-Version 0.3
+v0.3
 Removed shortcut/cheat section. 
 Added button to side panel instead.
-Version 0.2
+v0.2
 Fixed issue with Rare Metal depots.
