--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -116,7 +116,7 @@ You can copy and paste numbers if you want.",
 302535920000029,Error: Cannot find any %s.,
 302535920000032,Select a resource to find,
 302535920000503,Right-click an item/submenu to add/remove it from the quickbar.,
-302535920001309,"Press Tilde or Enter and click the ""Settings"" button to stop showing console log.",
+302535920001309,"Press Tilde or Enter and click the ""Settings"" button then uncheck ""Console Log"" to stop showing console log (instead of pressing F9 each time).",
 302535920000247,Startup ticks,
 302535920000729,You've started a mystery!,
 302535920000730,You've chosen a mystery!,
