Show Last Colonies v0.4:
Moved saved names to the pointer thingy.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -18,7 +18,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000069,Examine,
 302535920000491,Examine Object,
 302535920001073,Console,
-302535920000242,Blocked by SM function blacklist; use ECM HelperMod to bypass or tell the devs that ECM is awesome and it should have Über access.,
+302535920000242,Blocked by SM function blacklist; use ECM HelperMod to bypass or tell the devs that ECM is awesome and it should have Über access :),
 302535920001302,Find,
 302535920001303,Search for text within %s.,
 302535920000306,Everything,
