--- a/Mods ChoGGi/Show Last Colonies/changes.txt
+++ b/Mods ChoGGi/Show Last Colonies/changes.txt
@@ -1,3 +1,5 @@
+v0.4
+Moved saved names to the pointer thingy.
 v0.3
 Changed marker to just be the green dome instead of the outer bars as well.
 v0.2
