--- a/Mods ChoGGi/Change Object Colour/changes.txt
+++ b/Mods ChoGGi/Change Object Colour/changes.txt
@@ -1,11 +1,15 @@
-Version 0.4
+v0.5
+Da Vinci.
+Cleaning up code (ChoGGi's Library).
+
+v0.4
 Random colour now works with attachments now. 
 Updated code to parity with ECM code and steam version (GUI might look slightly different).
-Version 0.3
+v0.3
 Changed: 
 Change Colour now works with attachments (also moved the menu item to Misc, though you'll need to use F6 anyways for rocks/etc). 
 Added a base color modifier to Change Colour (you can change the colour of more items, like rocks/signs).
-Version 0.2
+v0.2
 Changed: 
 Change Colour now works with attachments (also moved the menu item to Misc, though you'll need to use F6 anyways for rocks/etc). 
 Added a base color modifier to Change Colour (you can change the colour of more items, like rocks/signs). 
