--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001344,,
-302535920001345,,
 302535920001346,,
 302535920001347,,
 302535920001348,,
@@ -295,6 +293,8 @@ Press Enter to refresh list (update names).
 Double click selected item to open in new manipulator.",
 302535920000102,Use to change values of selected list item.,
 302535920000103,Edit Value,
+302535920001344,Points To Train,
+302535920001345,How many points are needed to finish training.,
 302535920000037,Always Clean,
 302535920000316,Buildings will never get dusty.,
 302535920001114,Service Building Stats,
