Expanded Cheat Menu:
### Fixed:
- Some of the bindable stuff didn't have proper names in Options.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Terraformer/changes.txt
+++ b/Mods ChoGGi/Terraformer/changes.txt
@@ -1,3 +1,5 @@
+v0.7
+Accidentally made it Ctrl-F instead of Shift-F.
 v0.6
 Keys work properly now (in editor mode).
 Cleaning up code (ChoGGi's Library).
