Expanded Cheat Menu:
### Added:
- Fixes>Rocket Crashes Game On Landing: When you select a landing site with certain rockets; your game will crash to desktop.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001351,,
-302535920001352,,
 302535920001353,,
 302535920001354,,
 302535920001355,,
@@ -1156,6 +1154,8 @@ Mechanized: 1,000,000",
 302535920000578,Change waste storage depot capacity.,
 302535920000579,Storage Mechanized Depots,
 302535920000580,Change mechanized depot storage capacity.,
+302535920001351,Rocket Crashes Game On Landing,
+302535920001352,When you select a landing site; your game will crash to desktop.,
 302535920001299,Toggle Working On All Buildings,
 302535920001300,Does what it says; all buildings will have their working status toggled (fixes a couple issues).,
 302535920001295,Drones Not Repairing Domes,
