Expanded Cheat Menu/Library:
### Changed:
- Double-clicking a title bar will rollup the dialog into the title bar.
- If a dialog is highlighted (in blue) Shift-Esc will close it.

### Fixed:
- Couple minor issues for list choice dialogs.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Terraformer/changes.txt
+++ b/Mods ChoGGi/Terraformer/changes.txt
@@ -1,3 +1,6 @@
+v0.8
+Fixed Delete all Rocks being Shift-Ctrl-F instead of Ctrl-Shift-F.
+Made sure bindings are now named in keybindings in in-game options, so you can change them to whatever.
 v0.7
 Accidentally made it Ctrl-F instead of Shift-F.
 v0.6
