Library: ### Changed: - Darker list items, and some hover action.
ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -744,7 +744,7 @@ Until tomorrow, you know I'm free to roam.",
 302535920000817,Indischvolk,
 302535920000818,Südost Asiatischvolk,
 302535920000819,Nationalsozialistische Rassenhygiene,
-302535920000821,"Defaults to adding traits, check Remove to remove. Use Shift or Ctrl to select multiple traits.",
+302535920000821,"Defaults to adding traits, check Remove to remove.",
 302535920000822,Use game defaults,
 302535920000823,All Positive Traits,
 302535920000824,All the positive traits...,
