Expanded Cheat Menu/Library:
### Fixed:
- Use Last Orientation wasn't staying disabled (thanks McKaby).

If blacklist is enabled, now shows name of func that was blocked.

Code cleanup.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001353,,
 302535920001354,,
 302535920001355,,
 302535920001356,,
@@ -56,7 +55,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000069,Examine,
 302535920000491,Examine Object,
 302535920001073,Console,
-302535920000242,Blocked by SM function blacklist; use ECM HelperMod to bypass or tell the devs that ECM is awesome and it should have Über access :),
+302535920000242,%s is blocked by SM function blacklist; use ECM HelperMod to bypass or tell the devs that ECM is awesome and it should have Über access :),
 302535920001302,Find,
 302535920001303,Search for text within %s.,
 302535920000306,Everything,
@@ -242,6 +241,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
+302535920001353,Thread info,
 302535920000016,Remove any green spheres/reset green coloured objects.,
 302535920000021,Mark object with green sphere and/or paint.,
 302535920001321,UI Click To Select,
