--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -123,7 +123,7 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000006,Failed to save settings to %s : %s,
 302535920000243,Problem saving settings! Error: %s,
 302535920000007,Problem loading settings! Error: %s,
-302535920000008,Error: Couldn't convert old settings to new settings,
+302535920000008,"Error: Couldn't convert old settings to new settings: %s",
 302535920000009,Missing Scenario Name,
 302535920000010,Missing Name,
 302535920000011,Missing Description,
