--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001355,,
-302535920001356,,
-302535920001357,,
 302535920001358,,
 302535920001359,,
 302535920001360,,
@@ -47,6 +44,8 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001356,New,
+302535920001355,Map,
 302535920001354,"This dome (%s) has buildings, which = crash if removed...",
 302535920000723,Lua,
 302535920001257,Auto-refresh list every second.,
@@ -1536,6 +1535,7 @@ AddMaintenancePnts, MakeSphereTarget, SpawnWorker, SpawnVisitor",
 302535920000701,Queue up to 100 squares.,
 302535920000702,Game Speed,
 302535920000703,"Change the game speed (only for medium/fast, normal is normal).",
+302535920001357,Exclusion List,
 302535920000716,Set Commander,
 302535920000712,Set Sponsor,
 302535920001183,Add,
