Expanded Cheat Menu:
### Added:
- Threads checkbox to Find Value (allows you to search thread func names).

### Changed:
- More info shown for threads in examine (with blacklist).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001359,,
-302535920001360,,
-302535920001361,,
 302535920001362,,
 302535920001363,,
 302535920001364,,
@@ -207,6 +204,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001233,Launches rocket without asking.,
 302535920001234,Double the amount this %s can hold.,
 302535920001236,Double amount of reneagades this station can negate (currently: %s) < Reselect to update amount.,
+302535920001360,Threads,
+302535920001361,Will also search thread func names for value (case is ignored for this).,
 302535920000501,Case-sensitive,
 302535920000502,Treat uppercase and lowercase as distinct.,
 302535920001307,L%s,
@@ -239,6 +238,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
+302535920001359,debug.getinfo() level,
 302535920001358,debug.upvalue() level,
 302535920001353,Thread info,
 302535920000016,Remove any green spheres/reset green coloured objects.,
