Expanded Cheat Menu: ### Added: +- Help>Extract HPKs: Shows list of Steam downloaded mod hpk files, so you can extract them.
View Colony Map v0.5:
Sagan.
Added the nine new maps (re-did all of them just in case of differences).
There's no point in having the position in the title bar, so removed.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,8 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001362,,
-302535920001363,,
-302535920001364,,
-302535920001365,,
 302535920001366,,
 302535920001367,,
 302535920001368,,
@@ -1373,6 +1369,10 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
+302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
+302535920001362,Extract HPKs,
+302535920001363,"Shows list of Steam downloaded mod hpk files, so you can extract them.",
 302535920000504,List All Menu Items,
 302535920001323,Show all the cheat menu items in a list dialog.,
 302535920001285,Opens in webbrowser.,
